<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <!-- AppBarLayout dan Toolbar sebagai Top App Bar -->
    <include layout="@layout/toolbar_layout" />

    <!-- Konten detail pemain dalam ScrollView -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Gambar pemain -->
            <ImageView
                android:id="@+id/itemImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/nuri_sahin" />

            <!-- Nama pemain -->
            <TextView
                android:id="@+id/detailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="16dp"
                android:text="@string/manager_name" />

            <!-- Posisi pemain -->
            <TextView
                android:id="@+id/detailPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/manager" />

            <!-- Kebangsaan pemain -->
            <TextView
                android:id="@+id/detailNationality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/nationality_turkiye"/>

            <!-- Tanggal lahir dan umur pemain -->
            <TextView
                android:id="@+id/detailBirthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/birth_date_1988_9_5_36_years_old"/>

            <!-- Tinggi pemain -->
            <TextView
                android:id="@+id/detailHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/preferred_formation_4_2_3_1"/>

            <!-- Nilai pasar pemain -->
            <TextView
                android:id="@+id/detailMarketValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/coaching_licence_uefa_a_licence" />

            <!-- Nomor pemain -->
            <TextView
                android:id="@+id/itemNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/avg_term_as_coach_1_31_years" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
